--- a/install/Dockerfile
+++ b/install/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 
 RUN apt-get update
-RUN apt-get install -y python3-numpy python3-scipy python3-pip build-essential git
+RUN apt-get install -y python3-numpy python3-pip build-essential git
 
 WORKDIR /home/app
 COPY requirements.txt run_algorithm.py ./
