--- a/algos.yaml
+++ b/algos.yaml
@@ -128,6 +128,7 @@ float:
 
 
     flann:
+     disabled: true
      docker-tag: ann-benchmarks-flann
      module: ann_benchmarks.algorithms.flann
      constructor: FLANN
