--- a/install/Dockerfile.nann
+++ b/install/Dockerfile.nann
@@ -5,9 +5,7 @@ RUN apt-get install -y build-essential scons git openmpi-bin openmpi-common open
 RUN git clone https://github.com/schulzchristian/KaHIP
 RUN cd KaHIP && ./compile.sh && cd ..
 
+RUN ls
 RUN git clone https://gitlab.com/Arend/nann.git --branch package
-WORKDIR nann
-RUN pip3 install -r requirements.txt
-
-RUN python3 setup.py install
+RUN cd nann && python3 setup.py install
 RUN python3 -c 'import nann'
