--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   - LIBRARY=hdidx DATASET=random-xs-20-angular
   - LIBRARY=kgraph DATASET=random-xs-20-angular
   - LIBRARY=mrpt DATASET=random-xs-20-angular
+  - LIBRARY=nann DATASET=random-xs-20-angular
   - LIBRARY=nearpy DATASET=random-xs-20-angular
   - LIBRARY=ngt DATASET=random-xs-20-angular
   - LIBRARY=nmslib DATASET=random-xs-20-angular
