--- a/install/Dockerfile.nann
+++ b/install/Dockerfile.nann
@@ -1,5 +1,6 @@
 FROM ann-benchmarks
 COPY --from=arendvosmaer/kahip /KaHIP/ /KaHIP/
-RUN git clone https://gitlab.com/Arend/nann.git --branch package
-RUN cd nann && python3 setup.py install
+#RUN git clone https://gitlab.com/Arend/nann.git --branch package
+COPY nann nann
+RUN cd nann && pip3 install -r requirements.txt && python3 setup.py install
 RUN python3 -c 'import nann'
