--- a/install/Dockerfile.pgann
+++ b/install/Dockerfile.pgann
@@ -1,26 +1,36 @@
 FROM ann-benchmarks
 
+# install postgres (based on ann-benchmarks)
 ENV PG_VERSION 10
-
+ENV PG_FULL_VERSION 10.10
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive \ 
     apt-get install -y \ 
         postgresql-$PG_VERSION \
         postgresql-client-$PG_VERSION \
-        postgresql-contrib-$PG_VERSION \
-        postgresql-doc-$PG_VERSION \
-        postgresql-$PG_VERSION-plv8 \
-        postgresql-plpython-$PG_VERSION \
+        postgresql-contrib \
+        postgresql-server-dev-$PG_VERSION \
         libpq-dev \
+        curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && rm -rf /tmp/*
     
+# extend postgres cube size
+RUN curl https://ftp.postgresql.org/pub/source/v$PG_FULL_VERSION/postgresql-$PG_FULL_VERSION.tar.bz2 \ 
+    -o /postgresql-$PG_FULL_VERSION.tar.bz2
+RUN cd / && tar xvf postgresql-$PG_FULL_VERSION.tar.bz2
+RUN cd /postgresql-$PG_FULL_VERSION/contrib/cube \ 
+    && sed -i 's/#define CUBE_MAX_DIM (100)/#define CUBE_MAX_DIM (2048)/' cubedata.h \
+    && USE_PGXS=true make && USE_PGXS=true make install
+
+# install python requirements
 RUN pip3 install psycopg2 umap-learn
 
+# set up postgres
 USER postgres
-RUN service postgresql restart && psql --command \
-    "ALTER USER postgres WITH PASSWORD 'password';" \
+RUN service postgresql restart \ 
+    && psql --command "ALTER USER postgres WITH PASSWORD 'password';" \
     && createdb -O postgres ann_benchmark 
-
 USER root
+
 
