cleaned up on disk code

--- a/algosDisk.yaml
+++ b/algosDisk.yaml
@@ -1,5 +1,5 @@
 float:
-  any:
+  angular:
     faiss-ivf:
       docker-tag: ann-benchmarks-faiss
       module: ann_benchmarks.algorithms.faiss
@@ -89,49 +89,3 @@ float:
         pgann:
           args: [["None"]]
           query-args: [[1, 3, 5, 10]]
-bit:
-  hamming:
-    annoy:
-      docker-tag: ann-benchmarks-annoy
-      module: ann_benchmarks.algorithms.annoy
-      constructor: Annoy
-      base-args: ["@metric"]
-      run-groups:
-        annoy:
-          args: [[100, 200, 400]]
-          query-args: [[100, 200, 400, 1000, 2000, 4000, 10000, 20000, 40000,
-                      100000, 200000, 400000]]
-          # This run group produces 3 algorithm instances -- Annoy("angular",
-          # 100), Annoy("angular", 200), and Annoy("angular", 400) -- each of
-          # which will be used to run 12 different queries.
-    annoy-disk:
-      docker-tag: ann-benchmarks-annoy
-      module: ann_benchmarks.algorithms.annoy
-      constructor: AnnoyDisk
-      base-args: ["@metric"]
-      run-groups:
-        annoy:
-          args: [[100, 200, 400]]
-          query-args: [[100, 200, 400, 1000, 2000, 4000, 10000, 20000, 40000,
-                      100000, 200000, 400000]]
-          # This run group produces 3 algorithm instances -- Annoy("angular",
-          # 100), Annoy("angular", 200), and Annoy("angular", 400) -- each of
-          # which will be used to run 12 different queries.
-    faiss-ivf:
-      docker-tag: ann-benchmarks-faiss
-      module: ann_benchmarks.algorithms.faiss
-      constructor: FaissIVF
-      base-args: ["euclidean"]
-      run-groups:
-        base:
-          args: [[32,64,128,256,512,1024,2048,4096,8192]]
-          query-args: [[1, 5, 10, 50, 100, 200]]
-    faiss-ivf-disk:
-      docker-tag: ann-benchmarks-faiss
-      module: ann_benchmarks.algorithms.faiss
-      constructor: FaissIVFDisk
-      base-args: ["euclidean"]
-      run-groups:
-        base:
-          args: [[32,64,128,256,512,1024,2048,4096,8192]]
-          query-args: [[1, 5, 10, 50, 100, 200]]
