--- a/install/Dockerfile.milvus
+++ b/install/Dockerfile.milvus
@@ -1,8 +1,13 @@
 # Install Milvus
-FROM milvusdb/milvus:0.6.0-cpu-d120719-2b40dd as milvus
+FROM milvusdb/daily-build:ubuntu18.04-cpu-20200514 as milvus
 RUN apt-get update
-RUN apt-get install -y wget
-RUN wget https://raw.githubusercontent.com/milvus-io/docs/v0.6.0/assets/server_config.yaml
+RUN apt-get install -y wget make
+RUN wget https://github.com/xianyi/OpenBLAS/archive/v0.3.9.tar.gz && \
+    tar zxvf v0.3.9.tar.gz && cd OpenBLAS-0.3.9 && \
+    make TARGET=CORE2 DYNAMIC_ARCH=1 DYNAMIC_OLDER=1 USE_THREAD=0 USE_OPENMP=0 FC=gfortran CC=gcc COMMON_OPT="-O3 -g -fPIC" FCOMMON_OPT="-O3 -g -fPIC -frecursive" NMAX="NUM_THREADS=128" LIBPREFIX="libopenblas" LAPACKE="NO_LAPACKE=1" INTERFACE64=0 NO_STATIC=1 && \
+    make PREFIX=./ install && mv ./lib/* /var/lib/milvus/lib && \
+    cd .. && rm -rf OpenBLAS-0.3.9 && rm v0.3.9.tar.gz
+RUN wget https://raw.githubusercontent.com/milvus-io/milvus/master/core/conf/demo/server_config.yaml
 RUN sed -i 's/cpu_cache_capacity: 16/cpu_cache_capacity: 4/' server_config.yaml  # otherwise my Docker blows up
 RUN mv server_config.yaml /var/lib/milvus/conf/server_config.yaml
 
@@ -10,11 +15,12 @@ RUN mv server_config.yaml /var/lib/milvus/conf/server_config.yaml
 FROM ann-benchmarks
 COPY --from=milvus /var/lib/milvus /var/lib/milvus
 ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/var/lib/milvus/lib"
+RUN ls /var/lib/milvus/lib
 RUN apt-get update
-RUN apt-get install -y libmysqlclient-dev
+RUN apt-get install -y libmysqlclient-dev curl
 
 # Python client
-RUN pip3 install pymilvus
+RUN pip3 install pymilvus-test
 
 # Dumb entrypoint thing that runs the daemon as well
 RUN echo '#!/bin/bash' >> entrypoint.sh
