--- a/install/Dockerfile.milvus
+++ b/install/Dockerfile.milvus
@@ -1,5 +1,5 @@
 # Install Milvus
-FROM milvusdb/daily-build:ubuntu18.04-cpu-20200514 as milvus
+FROM milvusdb/milvus:0.9.0-cpu-d051520-cb92b1 as milvus
 RUN apt-get update
 RUN apt-get install -y wget make
 RUN wget https://github.com/xianyi/OpenBLAS/archive/v0.3.9.tar.gz && \
@@ -20,7 +20,7 @@ RUN apt-get update
 RUN apt-get install -y libmysqlclient-dev curl
 
 # Python client
-RUN pip3 install pymilvus-test
+RUN pip3 install pymilvus-test==0.3.21
 
 # Dumb entrypoint thing that runs the daemon as well
 RUN echo '#!/bin/bash' >> entrypoint.sh
