--- a/algos.yaml
+++ b/algos.yaml
@@ -164,8 +164,8 @@ float:
       base-args: ["@metric"]
       run-groups:
         milvus:
-          args: [[32,64,128,256,512,1024,2048,4096,8192]]
-          query-args: [[1, 5, 10, 50, 100, 200]]
+          args: [[32,64,128,256,512,1024,2048,4096,8192]]   # nlist
+          query-args: [[1, 5, 10, 50, 100, 200]]# nprobe (should be <= nlist)
     milvus-async:
       docker-tag: ann-benchmarks-milvus
       module: ann_benchmarks.algorithms.milvus_async
@@ -173,8 +173,8 @@ float:
       base-args: ["@metric"]
       run-groups:
         milvus:
-          args: [[32,64,128,256,512,1024,2048,4096,8192]]
-          query-args: [[1, 5, 10, 50, 100, 200]]
+          args: [[32,64,128,256,512,1024,2048,4096,8192]]   # nlist
+          query-args: [[1, 5, 10, 50, 100, 200]]# nprobe (should be <= nlist)
     nearpy:
       disabled: true
       docker-tag: ann-benchmarks-nearpy
