--- a/install/Dockerfile.milvus
+++ b/install/Dockerfile.milvus
@@ -1,5 +1,5 @@
 # Install Milvus
-FROM milvusdb/milvus:0.9.0-cpu-d051520-cb92b1 as milvus
+FROM milvus-local-dev-0100:latest as milvus
 RUN apt-get update
 RUN apt-get install -y wget make
 RUN wget https://github.com/xianyi/OpenBLAS/archive/v0.3.9.tar.gz && \
@@ -24,7 +24,7 @@ RUN pip3 install pymilvus-test==0.3.21
 
 # Dumb entrypoint thing that runs the daemon as well
 RUN echo '#!/bin/bash' >> entrypoint.sh
-RUN echo '/var/lib/milvus/bin/milvus_server -d -c /var/lib/milvus/conf/server_config.yaml -l /var/lib/milvus/conf/log_config.conf' >> entrypoint.sh
+RUN echo '/var/lib/milvus/bin/milvus_server -d -c /var/lib/milvus/conf/server_config.yaml' >> entrypoint.sh
 RUN echo 'sleep 5' >> entrypoint.sh
 RUN echo 'python3 run_algorithm.py "$@"' >> entrypoint.sh
 RUN chmod u+x entrypoint.sh
