--- a/install/Dockerfile.milvus
+++ b/install/Dockerfile.milvus
@@ -7,20 +7,23 @@ RUN wget https://github.com/xianyi/OpenBLAS/archive/v0.3.9.tar.gz && \
     make TARGET=CORE2 DYNAMIC_ARCH=1 DYNAMIC_OLDER=1 USE_THREAD=0 USE_OPENMP=0 FC=gfortran CC=gcc COMMON_OPT="-O3 -g -fPIC" FCOMMON_OPT="-O3 -g -fPIC -frecursive" NMAX="NUM_THREADS=128" LIBPREFIX="libopenblas" LAPACKE="NO_LAPACKE=1" INTERFACE64=0 NO_STATIC=1 && \
     make PREFIX=./ install && mv ./lib/* /var/lib/milvus/lib && \
     cd .. && rm -rf OpenBLAS-0.3.9 && rm v0.3.9.tar.gz
-RUN wget https://raw.githubusercontent.com/milvus-io/milvus/master/core/conf/demo/server_config.yaml
+
+ENV HTTP_PROXY=http://proxy.zilliz.tech/proxy.pac
+RUN wget http://raw.githubusercontent.com/milvus-io/milvus/master/core/conf/demo/server_config.yaml
 # RUN sed -i 's/cpu_cache_capacity: 16/cpu_cache_capacity: 4/' server_config.yaml  # otherwise my Docker blows up
+RUN sed -i 's/auto_flush_interval: 1/auto_flush_interval: 3600/' server_config.yaml  # otherwise my Docker blows up
 RUN mv server_config.yaml /var/lib/milvus/conf/server_config.yaml
 
 # Switch back to ANN-benchmarks base image and copy all files
 FROM ann-benchmarks
 COPY --from=milvus /var/lib/milvus /var/lib/milvus
 ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/var/lib/milvus/lib"
-RUN ls /var/lib/milvus/lib
 RUN apt-get update
 RUN apt-get install -y libmysqlclient-dev curl
 
 # Python client
 RUN pip3 install pymilvus==0.2.13
+# RUN pip install psutil
 
 # Dumb entrypoint thing that runs the daemon as well
 RUN echo '#!/bin/bash' >> entrypoint.sh
