--- a/install/Dockerfile.n2
+++ b/install/Dockerfile.n2
@@ -1,5 +1,5 @@
 FROM ann-benchmarks
 
-RUN pip3 install cython
-RUN pip3 install n2
+RUN sudo pip3 install cython
+RUN sudo pip3 install n2
 RUN python3 -c 'import n2'
