--- a/install/Dockerfile.annoy
+++ b/install/Dockerfile.annoy
@@ -1,8 +1,6 @@
 FROM ann-benchmarks
 
-RUN ls -lah /
-RUN ls -lah /home
-RUN ls -lah /home/app
 RUN git clone https://github.com/spotify/annoy
-RUN cd annoy && python3 setup.py install
+RUN cd annoy && sudo python3 setup.py install
 RUN python3 -c 'import annoy'
+
