--- a/install/Dockerfile.elasticsearch
+++ b/install/Dockerfile.elasticsearch
@@ -4,16 +4,16 @@ WORKDIR /home/app
 
 # Install elasticsearch.
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt install -y wget curl htop
+RUN sudo apt install -y wget curl htop
 RUN wget --quiet https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.9.2-amd64.deb \
-    && dpkg -i elasticsearch-7.9.2-amd64.deb \
+    && sudo dpkg -i elasticsearch-7.9.2-amd64.deb \
     && rm elasticsearch-7.9.2-amd64.deb
 
 # Install python client.
-RUN python3 -m pip install --upgrade elasticsearch==7.9.1
+RUN sudo python3 -m pip install --upgrade elasticsearch==7.9.1
 
 # Configure elasticsearch and JVM for single-node, single-core.
-RUN echo '\
+RUN sudo -s && echo '\
 discovery.type: single-node\n\
 network.host: 0.0.0.0\n\
 node.master: true\n\
@@ -26,7 +26,7 @@ path.data: /var/lib/elasticsearch\n\
 path.logs: /var/log/elasticsearch\n\
 ' > /etc/elasticsearch/elasticsearch.yml
 
-RUN echo '\
+RUN sudo -s && echo '\
 -Xms3G\n\
 -Xmx3G\n\
 -XX:+UseG1GC\n\
@@ -38,8 +38,8 @@ RUN echo '\
 -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m' > /etc/elasticsearch/jvm.options
 
 # Make sure you can start the service.
-RUN service elasticsearch start && service elasticsearch stop
+RUN sudo service elasticsearch start && service elasticsearch stop
 
 # Custom entrypoint that also starts the Elasticsearch server.
-RUN echo 'service elasticsearch start && python3 -u run_algorithm.py "$@"' > entrypoint.sh
+RUN echo 'sudo service elasticsearch start && python3 -u run_algorithm.py "$@"' > entrypoint.sh
 ENTRYPOINT ["/bin/bash", "/home/app/entrypoint.sh"]
