--- a/install/Dockerfile.mrpt
+++ b/install/Dockerfile.mrpt
@@ -1,4 +1,4 @@
 FROM ann-benchmarks
 
-RUN pip3 install sklearn
-RUN pip3 install git+https://github.com/vioshyvo/mrpt
+RUN sudo pip3 install sklearn
+RUN sudo pip3 install git+https://github.com/vioshyvo/mrpt
