--- a/install/Dockerfile.opendistroknn
+++ b/install/Dockerfile.opendistroknn
@@ -5,25 +5,25 @@ FROM ann-benchmarks
 WORKDIR /home/app
 
 # Install Open Distro following instructions from https://opendistro.github.io/for-elasticsearch-docs/docs/install/deb/
-RUN apt-get update \
-    && apt-get install software-properties-common -y
-RUN add-apt-repository ppa:openjdk-r/ppa \ 
-    && apt update \
-    && apt install openjdk-11-jdk -y
-RUN apt install unzip -y \
-    && apt-get install wget -y
+RUN sudo apt-get update \
+    && sudo apt-get install software-properties-common -y
+RUN sudo add-apt-repository ppa:openjdk-r/ppa \ 
+    && sudo apt update \
+    && sudo apt install openjdk-11-jdk -y
+RUN sudo apt install unzip -y \
+    && sudo apt-get install wget -y
 RUN wget -qO - https://d3g5vo6xdbdb9a.cloudfront.net/GPG-KEY-opendistroforelasticsearch | apt-key add -
-RUN echo "deb https://d3g5vo6xdbdb9a.cloudfront.net/apt stable main" | tee -a   /etc/apt/sources.list.d/opendistroforelasticsearch.list
+RUN echo "deb https://d3g5vo6xdbdb9a.cloudfront.net/apt stable main" | sudo tee -a   /etc/apt/sources.list.d/opendistroforelasticsearch.list
 RUN wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-oss-7.10.0-amd64.deb \
-    && dpkg -i elasticsearch-oss-7.10.0-amd64.deb
-RUN apt-get update \
-    && apt install opendistroforelasticsearch=1.12.0-1 -y
+    && sudo dpkg -i elasticsearch-oss-7.10.0-amd64.deb
+RUN sudo apt-get update \
+    && sudo apt install opendistroforelasticsearch=1.12.0-1 -y
 
 # Install python client.
-RUN python3 -m pip install --upgrade elasticsearch>=7.0.0
+RUN sudo python3 -m pip install --upgrade elasticsearch>=7.0.0
 
 # Configure elasticsearch and JVM for single-node, single-core.
-RUN echo '\
+RUN sudo echo '\
 opendistro_security.disabled: true\n\
 discovery.type: single-node\n\
 network.host: 0.0.0.0\n\
@@ -37,7 +37,7 @@ path.data: /var/lib/elasticsearch\n\
 path.logs: /var/log/elasticsearch\n\
 ' > /etc/elasticsearch/elasticsearch.yml
 
-RUN echo '\
+RUN sudo echo '\
 -Xms3G\n\
 -Xmx3G\n\
 -XX:+UseG1GC\n\
@@ -49,8 +49,8 @@ RUN echo '\
 -Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m' > /etc/elasticsearch/jvm.options
 
 # Make sure you can start the service.
-RUN service elasticsearch start && service elasticsearch stop
+RUN sudo service elasticsearch start && sudo service elasticsearch stop
 
 # Custom entrypoint that also starts the Elasticsearch server.
-RUN echo 'service elasticsearch start && python3 -u run_algorithm.py "$@"' > entrypoint.sh
+RUN echo 'sudo service elasticsearch start && python3 -u run_algorithm.py "$@"' > entrypoint.sh
 ENTRYPOINT ["/bin/bash", "/home/app/entrypoint.sh"]
