--- a/install/Dockerfile.rpforest
+++ b/install/Dockerfile.rpforest
@@ -1,5 +1,5 @@
 FROM ann-benchmarks
 
 RUN git clone https://github.com/lyst/rpforest
-RUN cd rpforest && python3 setup.py install
+RUN cd rpforest && sudo python3 setup.py install
 RUN python3 -c 'import rpforest'
