--- a/install/Dockerfile.elasticsearch
+++ b/install/Dockerfile.elasticsearch
@@ -13,7 +13,7 @@ RUN wget --quiet https://artifacts.elastic.co/downloads/elasticsearch/elasticsea
 RUN sudo python3 -m pip install --upgrade elasticsearch==7.9.1
 
 # Configure elasticsearch and JVM for single-node, single-core.
-RUN sudo -s && echo '\
+RUN echo '\
 discovery.type: single-node\n\
 network.host: 0.0.0.0\n\
 node.master: true\n\
@@ -24,9 +24,9 @@ thread_pool.search.size: 1\n\
 thread_pool.search.queue_size: 1\n\
 path.data: /var/lib/elasticsearch\n\
 path.logs: /var/log/elasticsearch\n\
-' > /etc/elasticsearch/elasticsearch.yml
+' | sudo tee /etc/elasticsearch/elasticsearch.yml
 
-RUN sudo -s && echo '\
+RUN echo '\
 -Xms3G\n\
 -Xmx3G\n\
 -XX:+UseG1GC\n\
@@ -35,7 +35,7 @@ RUN sudo -s && echo '\
 -XX:+HeapDumpOnOutOfMemoryError\n\
 -XX:HeapDumpPath=/var/lib/elasticsearch\n\
 -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log\n\
--Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m' > /etc/elasticsearch/jvm.options
+-Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m' | sudo tee  /etc/elasticsearch/jvm.options
 
 # Make sure you can start the service.
 RUN sudo service elasticsearch start && service elasticsearch stop
