--- a/install/Dockerfile.opendistroknn
+++ b/install/Dockerfile.opendistroknn
@@ -12,7 +12,7 @@ RUN sudo add-apt-repository ppa:openjdk-r/ppa \
     && sudo apt install openjdk-11-jdk -y
 RUN sudo apt install unzip -y \
     && sudo apt-get install wget -y
-RUN wget -qO - https://d3g5vo6xdbdb9a.cloudfront.net/GPG-KEY-opendistroforelasticsearch | apt-key add -
+RUN wget -qO - https://d3g5vo6xdbdb9a.cloudfront.net/GPG-KEY-opendistroforelasticsearch | sudo apt-key add -
 RUN echo "deb https://d3g5vo6xdbdb9a.cloudfront.net/apt stable main" | sudo tee -a   /etc/apt/sources.list.d/opendistroforelasticsearch.list
 RUN wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-oss-7.10.0-amd64.deb \
     && sudo dpkg -i elasticsearch-oss-7.10.0-amd64.deb
@@ -23,7 +23,7 @@ RUN sudo apt-get update \
 RUN sudo python3 -m pip install --upgrade elasticsearch>=7.0.0
 
 # Configure elasticsearch and JVM for single-node, single-core.
-RUN sudo echo '\
+RUN echo '\
 opendistro_security.disabled: true\n\
 discovery.type: single-node\n\
 network.host: 0.0.0.0\n\
@@ -35,9 +35,9 @@ thread_pool.search.size: 1\n\
 thread_pool.search.queue_size: 1\n\
 path.data: /var/lib/elasticsearch\n\
 path.logs: /var/log/elasticsearch\n\
-' > /etc/elasticsearch/elasticsearch.yml
+' | sudo tee /etc/elasticsearch/elasticsearch.yml
 
-RUN sudo echo '\
+RUN echo '\
 -Xms3G\n\
 -Xmx3G\n\
 -XX:+UseG1GC\n\
@@ -46,7 +46,7 @@ RUN sudo echo '\
 -XX:+HeapDumpOnOutOfMemoryError\n\
 -XX:HeapDumpPath=/var/lib/elasticsearch\n\
 -XX:ErrorFile=/var/log/elasticsearch/hs_err_pid%p.log\n\
--Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m' > /etc/elasticsearch/jvm.options
+-Xlog:gc*,gc+age=trace,safepoint:file=/var/log/elasticsearch/gc.log:utctime,pid,tags:filecount=32,filesize=64m' | sudo tee /etc/elasticsearch/jvm.options
 
 # Make sure you can start the service.
 RUN sudo service elasticsearch start && sudo service elasticsearch stop
