--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -61,6 +61,8 @@ jobs:
             dataset: random-s-jaccard
           - library: pynndescent
             dataset: random-s-jaccard
+          - library: nmslib
+            dataset: random-s-jaccard
       fail-fast: false
 
     steps:
