Add benchmark for n-dimensional khash (from UCX).

--- a/algos.yaml
+++ b/algos.yaml
@@ -508,6 +508,14 @@ float:
                         [5, 1.00], [10, 1.00], [20, 1.00],
                         [1.2, 1.02], [1.5, 1.02], [2.0, 1.02], [3.0, 1.02],
                         [2, 1.04], [3, 1.04], [5, 1.04], [8, 1.04]]]
+    khash:
+      docker-tag: ann-benchmarks-khash
+      module: ann_benchmarks.algorithms.khash
+      constructor: Khash
+      base-args: ["@count", "@metric", "@dimension", "@point_type"]
+      run-groups:
+        khash:
+          args: []
 
   euclidean:
     vamana(diskann):
@@ -1104,6 +1112,14 @@ float:
 
 bit:
   hamming:
+    khash:
+      docker-tag: ann-benchmarks-khash
+      module: ann_benchmarks.algorithms.khash
+      constructor: Khash
+      base-args: ["@count", "@metric", "@dimension", "@point_type"]
+      run-groups:
+        khash:
+          args: []
     mih:
       docker-tag: ann-benchmarks-mih
       module: ann_benchmarks.algorithms.subprocess
