--- a/install/Dockerfile.faiss
+++ b/install/Dockerfile.faiss
@@ -6,10 +6,8 @@ RUN bash Anaconda3-2020.11-Linux-x86_64.sh -b
 
 ENV PATH /root/anaconda3/bin:$PATH
 
-COPY requirements_py38.txt ./
-# conda doesn't like some of our packages, use pip
-RUN python3 -m pip install -r requirements_py38.txt
-RUN conda install -c pytorch faiss-cpu
+RUN python3 -m pip install ansicolors==1.1.8 
+RUN conda install -c pytorch faiss-cpu h5py docker numpy 
 
 # https://developpaper.com/a-pit-of-mkl-library-in-linux-anaconda/
 ENV LD_PRELOAD /root/anaconda3/lib/libmkl_core.so:/root/anaconda3/lib/libmkl_sequential.so 
