Add vearch to ANN Benchmarks

--- a/algos.yaml
+++ b/algos.yaml
@@ -671,6 +671,20 @@ float:
           arg-groups:
             - {"M": 96, "efConstruction": 500}
           query-args: [[10, 20, 40, 80, 120, 200, 400, 600, 800]]
+    vearch:
+      docker-tag: ann-benchmarks-vearch
+      module: ann_benchmarks.algorithms.vearch
+      constructor: VearchIndex
+      run-groups:
+        vearch1:
+          args: [["euclidean"], [512], [-1], [2]]
+          query-args: [[[2, 32], [3, 32],[4, 32], [6, 64], [8, 64], [10, 64], [10, 96], [12, 84], [12, 128], [16, 128], [20, 150], [32, 200], [35, 256], [50, 360]]]
+        vearch2:
+          args: [["euclidean"], [2048], [-1], [4]]
+          query-args: [[[10, 128], [16, 140], [24, 160], [32, 190], [40, 200], [45, 220], [50, 100], [50, 240], [64, 100], [64, 256], [70, 300], [80, 100], [80, 400], [100, 512], [128, 600], [150, 800], [200, 900]]]
+        vearch3:
+          args: [["euclidean"], [128], [-1], [4]]
+          query-args: [[[1, 10], [1, 20], [2, 20], [3, 20], [3, 32], [4, 32], [5, 64], [6, 64], [7, 64], [8, 96]]]
 
   angular:
     vamana(diskann):
@@ -955,6 +969,24 @@ float:
           arg-groups:
             - {"M": 96, "efConstruction": 500}
           query-args: [[10, 20, 40, 80, 120, 200, 400, 600, 800]]
+    vearch:
+      docker-tag: ann-benchmarks-vearch
+      module: ann_benchmarks.algorithms.vearch
+      constructor: VearchIndex
+      base-args: ["@metric"]
+      run-groups:
+        vearch1:
+          args: [[2048], [0.2], [2]]
+          query-args: [[[1, 32], [2,32], [4, 32], [8, 32], [16, 128], [32, 128], [32, 96], [40, 96], [48, 96], [48, 128], [64, 128], [80, 128], [96, 128], [108, 128], [128, 192], [152, 192], [192, 320], [210, 512], [256, 512], [300, 320], [380, 320], [512, 512], [768, 1024]]]
+        vearch2:
+          args: [[1536], [0.5], [1]]
+          query-args: [[[1, 32], [2, 32], [4, 32], [8, 32], [8, 24], [10, 24], [12, 24], [13, 24], [14, 28], [16, 32], [18, 32], [18, 44], [20, 44], [24, 44], [26, 50], [32, 50], [36, 56], [50, 64], [60, 64], [80, 80], [96, 96]]]
+        vearch3:
+          args: [[1028], [0.2], [1]]
+          query-args: [[[1, 32], [2, 32], [4, 32], [8, 32], [8, 24], [10, 36], [12, 36], [14, 36], [14, 40], [16, 40], [18, 40], [18, 46], [20, 46], [20, 58], [26, 58], [26, 72], [32, 72], [44, 96], [48, 96], [60, 128], [70, 140]]]
+        vearch4:
+          args: [[1536], [0.15], [3]]
+          query-args: [[[1, 32], [4, 32], [8, 32], [16, 32], [25, 50], [36, 72], [48, 96], [72, 128], [92, 200], [128, 200], [180, 256], [200, 300], [256, 400], [300, 500], [400, 600], [500, 700], [800, 900]]]
 
 bit:
   hamming:
