--- a/algos.yaml
+++ b/algos.yaml
@@ -1314,3 +1314,11 @@ bit:
                 - {"tuneK": 10, "desiredRecall": [0.99, 0.97, 0.95, 0.9, 0.85, 0.8,
                     0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1]}
                 - False
+    raft-ivfpq:
+      docker-tag: ann-benchmarks-raft_ivfpq
+      module: ann_benchmarks.algorithms.raft_ivfpq
+      constructor: RAFTIVFPQ
+      run-groups:
+        base:
+          args: [[400, 1024, 4096, 8192, 16384],
+                 [1, 10, 40, 100, 200]]
