Finally got this running for raft

--- a/install/Dockerfile.raft_ivfpq
+++ b/install/Dockerfile.raft_ivfpq
@@ -6,8 +6,11 @@ RUN bash Miniconda3-py38_22.11.1-1-Linux-x86_64.sh -b
 
 ENV PATH /root/miniconda3/bin:$PATH
 
+RUN pip install -r requirements.txt
+
 RUN conda install -y -c conda-forge mamba
-RUN mamba install -y -c conda-forge -c nvidia -c rapidsai-nightly ansicolors numpy==1.23.5 rmm==23.02* pylibraft==23.02*
-RUN pip install docker==5.0.2
+RUN mamba install -y -c conda-forge -c nvidia -c rapidsai-nightly numpy==1.23.5 rmm==23.02* pylibraft==23.02* cudatoolkit==11.6* --force-reinstall
+
+RUN nvidia-smi
 
 RUN python -c 'from pylibraft.neighbors import ivf_pq;'
