--- a/algos.yaml
+++ b/algos.yaml
@@ -64,8 +64,8 @@ float:
       constructor: RAFTIVFPQ
       run-groups:
         base:
-          args: [[400, 1024, 4096, 8192, 16384],
-                 [1, 10, 40, 100, 200]]
+          args: [[512, 1204, 2048, 4096]]
+          query-args: [[1, 5, 10, 50, 100, 200]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
