--- a/algos.yaml
+++ b/algos.yaml
@@ -66,7 +66,7 @@ float:
       run-groups:
         base:
           args: [[512, 1204, 2048, 4096]]
-          query-args: [[1, 5, 10, 50, 100, 200]]
+          query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100, 1000]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
