--- a/algos.yaml
+++ b/algos.yaml
@@ -56,8 +56,8 @@ float:
       constructor: FaissGPU
       run-groups:
         base:
-          args: [[400, 1024, 4096, 8192, 16384],
-                 [1, 10, 40, 100, 200]]
+          args: [[512, 1204, 2048, 4096]]
+          query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100]]
     raft-ivfpq:
       disabled: true
       docker-tag: ann-benchmarks-raft_ivfpq
@@ -66,7 +66,7 @@ float:
       run-groups:
         base:
           args: [[512, 1204, 2048, 4096]]
-          query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100, 1000]]
+          query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
