--- a/algos.yaml
+++ b/algos.yaml
@@ -65,8 +65,8 @@ float:
       constructor: RAFTIVFPQ
       run-groups:
         base:
-          args: [[32, 64, 128, 256, 512, 1204, 2048, 4096], [4, 5, 6, 7, 8], [0, 8, 16, 32, 64, 128], ["float32", "byte"]]
-          query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100], ["ubyte", "float32"]]
+          args: [[32, 64, 128, 256, 512, 1204, 2048, 4096], [4, 5, 6, 7, 8], [0, 8, 16, 32, 64, 128], ["float", "byte"]]
+          query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100], ["ubyte", "float"]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
