--- a/algos.yaml
+++ b/algos.yaml
@@ -65,7 +65,7 @@ float:
       constructor: RAFTIVFPQ
       run-groups:
         base:
-          args: [[32, 64, 128, 256, 512, 1204, 2048, 4096], [4, 5, 6, 7, 8], [0, 8, 16, 32, 64, 128], ["float", "byte"]]
+          args: [[32, 64, 128], [4], [0], ["float", "byte"]]
           query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100], ["ubyte", "float"]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
