--- a/algos.yaml
+++ b/algos.yaml
@@ -63,9 +63,10 @@ float:
       docker-tag: ann-benchmarks-raft_ivfpq
       module: ann_benchmarks.algorithms.raft_ivfpq
       constructor: RAFTIVFPQ
+      base-args: ["@metric"]
       run-groups:
         base:
-          args: [[32, 64, 128], [4], [0], ["float", "byte"]]
+          args: [[512, 1024, 2048, 4096], [4, 5], [0], ["float", "byte"]]
           query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100], ["ubyte", "float"]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
