--- a/algos.yaml
+++ b/algos.yaml
@@ -60,7 +60,7 @@ float:
           query-args: [[1, 5, 10, 50, 100, 200], [0, 10, 100]]
     raft-ivfpq:
       disabled: true
-      docker-tag: ann-benchmarks-raft_ivfpq
+      docker-tag: ann-benchmarks-raft
       docker-runtime: "nvidia"
       module: ann_benchmarks.algorithms.raft_ivfpq
       constructor: RAFTIVFPQ
