--- a/algos.yaml
+++ b/algos.yaml
@@ -68,8 +68,8 @@ float:
       base-args: ["@metric"]
       run-groups:
         base:
-          args: [[400, 1024, 4096, 8192, 16384], [4, 5], [64], ["float", "byte"]]
-          query-args: [[1, 5, 10, 50, 100, 200], [0, 2.0, 4.0], ["ubyte", "float"]]
+          args: [[100, 400, 1024, 4096, 8192, 16384], [4, 5, 8], [48, 64, 128]]
+          query-args: [[5, 10, 50, 100, 200], [0, 2.0, 4.0], ["uint8", "float32", "float16"], ["float32", "float16"]]
     luceneknn:
       docker-tag: ann-benchmarks-luceneknn
       module: ann_benchmarks.algorithms.luceneknn
