--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -80,6 +80,8 @@ jobs:
             dataset: random-xs-20-angular
           - library: qsgngt
             dataset: random-xs-20-angular
+          - library: raft-ivfpq
+            dataset: random-xs-20-angular
       fail-fast: false
 
     env:
