--- a/algos.yaml
+++ b/algos.yaml
@@ -59,6 +59,7 @@ float:
           args: [[400, 1024, 4096, 8192, 16384],
                  [1, 10, 40, 100, 200]]
     raft-ivfpq:
+      disabled: true
       docker-tag: ann-benchmarks-raft
       docker-runtime: "nvidia"
       docker-env: ["DISABLE_JUPYTER=true"]
